--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,23 @@
     <link rel="stylesheet" href="<%= BASE_URL %>libs/swiper-4.1.0.min.css">
     <script src="<%= BASE_URL %>libs/swiper-4.1.0.min.js"></script>
     <title>movie</title>
+    <style>
+      #app{
+        display: flex;
+        height: 100vh;
+      }
+      #app div{
+        margin: auto;
+      }
+    </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but move doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <div>努力加载中...</div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
